--- a/index.html
+++ b/index.html
@@ -1,10 +1,57 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link rel="stylesheet" href="dist/app.css">
-    <title>painter
-    </title>
+    <title>painter</title>
+
+    <!-- nav  -->
+    <div class="wrapper_nav">
+      <nav class="nav_general">
+        <!-- contatti -->
+        <div class="nav_contatti ">
+          <div class="phone">
+            <i class="fas fa-phone-alt"></i>
+            <span> 1-877-582-6735</span>
+          </div>
+          <div class="phone">
+            <i class="fas fa-comment-alt"></i>
+            <span>CHAT</span>
+          </div>
+          <div class="phone">
+            <i class="fas fa-user"></i>
+            <span>Sign In</span>
+          </div>
+          <div class="phone">
+            <i class="fas fa-shopping-cart"></i>
+            <span>Cart</span>
+          </div>
+          <div class="phone">
+            <form class=""  method="post">
+              <select class="languages" name="">
+                <option value="english">English</option>
+                <option value="italiano">Italiano</option>
+                <option value="deutch">Deutch</option>
+              </select>
+            </form>
+          </div>
+        </div>
+        <!--/ contatti -->
+        <!-- nav info -->
+        <div class="nav_info">
+
+        </div>
+        <!-- nav info -->
+
+
+      </nav>
+
+    </div>
+    <!-- nav -->
+
   </head>
   <body>
   </body>
