--- a/index.html
+++ b/index.html
@@ -42,7 +42,33 @@
         <!--/ contatti -->
         <!-- nav info -->
         <div class="nav_info">
-
+          <div class="con_logo">
+            <img class="logo" src="img/logo.png" alt="">
+          </div>
+          <div class="info_search">
+            <span>Products</span>
+          </div>
+          <div class="info_search">
+            <span>Brushes</span>
+          </div>
+          <div class="info_search">
+            <span>Wacom Tablets</span>
+          </div>
+          <div class="info_search">
+            <span>Special Offert</span>
+          </div>
+          <div class="info_search">
+            <span>Free Trials</span>
+          </div>
+          <div class="info_search">
+            <span>Business</span>
+          </div>
+          <div class="info_search">
+            <span>Support</span>
+          </div>
+          <div class="info_search">
+            <span>Learning</span>
+          </div>
         </div>
         <!-- nav info -->
 
