--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <!-- nav info -->
         <div class="nav_info">
           <div class="con_logo">
-            <img class="logo" src="img/logo.png" alt="">
+            <img class="logo" src="dist/img/logo.png" alt="">
           </div>
           <div class="info_search">
             <span>Products</span>
