--- a/index.html
+++ b/index.html
@@ -7,78 +7,85 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
     <link rel="stylesheet" href="dist/app.css">
     <title>painter</title>
-
-    <!-- nav  -->
-    <div class="wrapper_nav">
-      <nav class="nav_general">
-        <!-- contatti -->
-        <div class="nav_contatti ">
-          <div class="phone">
-            <i class="fas fa-phone-alt"></i>
-            <span> 1-877-582-6735</span>
-          </div>
-          <div class="phone">
-            <i class="fas fa-comment-alt"></i>
-            <span>CHAT</span>
-          </div>
-          <div class="phone">
-            <i class="fas fa-user"></i>
-            <span>Sign In</span>
-          </div>
-          <div class="phone">
-            <i class="fas fa-shopping-cart"></i>
-            <span>Cart</span>
-          </div>
-          <div class="phone">
-            <form class=""  method="post">
-              <select class="languages" name="">
-                <option value="english">English</option>
-                <option value="italiano">Italiano</option>
-                <option value="deutch">Deutch</option>
-              </select>
-            </form>
-          </div>
-        </div>
-        <!--/ contatti -->
-        <!-- nav info -->
-        <div class="nav_info">
-          <div class="con_logo">
-            <img class="logo" src="dist/img/logo.png" alt="">
-          </div>
-          <div class="info_search">
-            <span>Products</span>
-          </div>
-          <div class="info_search">
-            <span>Brushes</span>
-          </div>
-          <div class="info_search">
-            <span>Wacom Tablets</span>
-          </div>
-          <div class="info_search">
-            <span>Special Offert</span>
-          </div>
-          <div class="info_search">
-            <span>Free Trials</span>
-          </div>
-          <div class="info_search">
-            <span>Business</span>
-          </div>
-          <div class="info_search">
-            <span>Support</span>
-          </div>
-          <div class="info_search">
-            <span>Learning</span>
-          </div>
-        </div>
-        <!-- nav info -->
-
-
-      </nav>
-
-    </div>
-    <!-- nav -->
-
-  </head>
   <body>
+    <header>
+      <!-- nav  -->
+      <div class="wrapper_nav">
+        <nav class="nav_general">
+          <!-- contatti -->
+          <div class="nav_contatti ">
+            <div class="phone">
+              <i class="fas fa-phone-alt"></i>
+              <span> 1-877-582-6735</span>
+            </div>
+            <div class="phone">
+              <i class="fas fa-comment-alt"></i>
+              <span>CHAT</span>
+            </div>
+            <div class="phone">
+              <i class="fas fa-user"></i>
+              <span>Sign In</span>
+            </div>
+            <div class="phone">
+              <i class="fas fa-shopping-cart"></i>
+              <span>Cart</span>
+            </div>
+            <div class="phone">
+              <form class=""  method="post">
+                <select class="languages" name="">
+                  <option value="english">English</option>
+                  <option value="italiano">Italiano</option>
+                  <option value="deutch">Deutch</option>
+                </select>
+              </form>
+            </div>
+          </div>
+          <!--/ contatti -->
+          <!-- nav info -->
+          <div class="nav_info">
+            <div class="con_logo">
+              <img class="logo" src="dist/img/logo.png" alt="">
+            </div>
+            <div class="info_search">
+              <span>Products</span>
+            </div>
+            <div class="info_search">
+              <span>Brushes</span>
+            </div>
+            <div class="info_search">
+              <span>Wacom Tablets</span>
+            </div>
+            <div class="info_search">
+              <span>Special Offert</span>
+            </div>
+            <div class="info_search">
+              <span>Free Trials</span>
+            </div>
+            <div class="info_search">
+              <span>Business</span>
+            </div>
+            <div class="info_search">
+              <span>Support</span>
+            </div>
+            <div class="info_search">
+              <span>Learning</span>
+            </div>
+          </div>
+          <!-- nav info -->
+        </nav>
+      </div>
+      <!-- nav -->
+      <div class="jumbo">
+        <div class="essential">
+          <h2>Painter Essential 7 (Windows/Mac)</h2>
+
+        </div>
+
+      </div>
+    </header>
+    <main>
+
+    </main>
+    <footer></footer>
   </body>
 </html>
